test/tests/compiler/15_arrays_and_pointer_arithmetic/invalid_parse/unclosed_nested_initializer.plx
pub fn main(none) i32 {
    arr: [2][2]i32 = $($(1, 2), $(3, 4)
    return arr[0][0]
}
